--- a/index.html
+++ b/index.html
@@ -1,186 +1,100 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmação de Presença | Pietro & Kleber</title>
     <style>
-        body {
-            background-color: #f5f5f5;
-            font-family: Arial, sans-serif;
-            color: #333;
-            text-align: center;
-            padding: 20px;
-        }
-        h1 {
-            color: #222;
-        }
-        .container {
-            background-color: white;
-            border-radius: 12px;
-            padding: 20px;
-            max-width: 500px;
-            margin: 0 auto;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-        }
-        input {
-            padding: 10px;
-            width: 80%;
-            border-radius: 8px;
-            border: 1px solid #ccc;
-            margin-bottom: 10px;
-        }
-        button {
-            padding: 10px 20px;
-            margin: 5px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            color: white;
-            font-weight: bold;
-            transition: 0.3s;
-        }
-        .btn-yes {
-            background-color: #4CAF50;
-        }
-        .btn-yes:hover {
-            background-color: #45a049;
-        }
-        .btn-no {
-            background-color: #f44336;
-        }
-        .btn-no:hover {
-            background-color: #e53935;
-        }
-        .counts {
-            margin: 15px 0;
-        }
-        .list {
-            text-align: left;
-            margin: 10px 0;
-        }
-        .list h3 {
-            margin-bottom: 5px;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        ul li {
-            background-color: #eee;
-            margin: 4px 0;
-            padding: 6px 10px;
-            border-radius: 6px;
-        }
+        body { font-family: Arial; background: #f5f5f5; text-align: center; }
+        .container { background: white; padding: 20px; border-radius: 10px; max-width: 500px; margin: auto; }
+        input { padding: 10px; width: 80%; margin-bottom: 10px; }
+        button { padding: 10px 20px; margin: 5px; border: none; border-radius: 8px; color: white; cursor: pointer; }
+        .btn-yes { background-color: #4CAF50; }
+        .btn-no { background-color: #f44336; }
+        ul { text-align: left; padding: 0; list-style: none; }
+        li { background: #eee; margin: 4px 0; padding: 6px 10px; border-radius: 6px; }
     </style>
 </head>
 <body>
 
-    <div class="container">
-        <h1>Confirmação de Presença 🎉</h1>
-        <p>Aniversário Pietro & Kleber - 24/06/2025</p>
-        <p>Local: Espetaria Coronel - 19h30</p>
+<div class="container">
+    <h1>Confirmação de Presença 🎉</h1>
+    <p>Aniversário Pietro & Kleber - 24/06/2025</p>
+    <p>Local: Espetaria Coronel - 19h30</p>
 
-        <input type="text" id="nameInput" placeholder="Digite seu nome" />
+    <input type="text" id="nameInput" placeholder="Digite seu nome">
 
-        <div>
-            <button class="btn-yes" onclick="confirmYes()">Vou 🎈</button>
-            <button class="btn-no" onclick="confirmNo()">Não Vou 😢</button>
-        </div>
-
-        <div class="counts">
-            <p>✅ Confirmados: <span id="yesCount">0</span></p>
-            <p>❌ Não vão: <span id="noCount">0</span></p>
-        </div>
-
-        <div class="list">
-            <h3>✅ Quem vai:</h3>
-            <ul id="yesList"></ul>
-
-            <h3>❌ Quem não vai:</h3>
-            <ul id="noList"></ul>
-        </div>
+    <div>
+        <button class="btn-yes" onclick="confirmPresence('Vou')">Vou 🎈</button>
+        <button class="btn-no" onclick="confirmPresence('Não Vou')">Não Vou 😢</button>
     </div>
 
-    <script>
-        // Pega os dados do localStorage ou cria arrays vazios
-        let yesListData = JSON.parse(localStorage.getItem('yesList')) || [];
-        let noListData = JSON.parse(localStorage.getItem('noList')) || [];
+    <div class="counts">
+        <p>✅ Confirmados: <span id="yesCount">0</span></p>
+        <p>❌ Não vão: <span id="noCount">0</span></p>
+    </div>
 
-        // Atualiza contadores e listas na tela com os dados salvos
-        function updateDisplay() {
-            document.getElementById('yesCount').innerText = yesListData.length;
-            document.getElementById('noCount').innerText = noListData.length;
+    <div class="list">
+        <h3>✅ Quem vai:</h3>
+        <ul id="yesList"></ul>
 
-            const yesListEl = document.getElementById('yesList');
-            const noListEl = document.getElementById('noList');
+        <h3>❌ Quem não vai:</h3>
+        <ul id="noList"></ul>
+    </div>
+</div>
 
-            yesListEl.innerHTML = '';
-            noListEl.innerHTML = '';
+<script>
+    const apiURL = "https://script.google.com/macros/s/AKfycbygqrNbrCTqEGE2gX1yHsC249DtJNS3BRWcsiIOH_W7vc5OS__5lXxC5X1UY5BOQD5X/exec";
 
-            yesListData.forEach(name => {
-                const li = document.createElement('li');
-                li.textContent = name;
-                yesListEl.appendChild(li);
-            });
+    async function fetchList() {
+        const response = await fetch(apiURL);
+        const data = await response.json();
 
-            noListData.forEach(name => {
-                const li = document.createElement('li');
-                li.textContent = name;
-                noListEl.appendChild(li);
-            });
+        const yesList = data.filter(item => item.status === "Vou").map(i => i.nome);
+        const noList = data.filter(item => item.status === "Não Vou").map(i => i.nome);
+
+        document.getElementById("yesCount").innerText = yesList.length;
+        document.getElementById("noCount").innerText = noList.length;
+
+        const yesListEl = document.getElementById("yesList");
+        const noListEl = document.getElementById("noList");
+
+        yesListEl.innerHTML = "";
+        noListEl.innerHTML = "";
+
+        yesList.forEach(name => {
+            const li = document.createElement("li");
+            li.innerText = name;
+            yesListEl.appendChild(li);
+        });
+
+        noList.forEach(name => {
+            const li = document.createElement("li");
+            li.innerText = name;
+            noListEl.appendChild(li);
+        });
+    }
+
+    async function confirmPresence(status) {
+        const name = document.getElementById("nameInput").value.trim();
+        if (name === "") {
+            alert("Por favor, digite seu nome.");
+            return;
         }
 
-        // Salva no localStorage
-        function saveData() {
-            localStorage.setItem('yesList', JSON.stringify(yesListData));
-            localStorage.setItem('noList', JSON.stringify(noListData));
-        }
+        const payload = { nome: name, status: status };
+        await fetch(apiURL, {
+            method: "POST",
+            body: JSON.stringify(payload),
+            headers: { "Content-Type": "application/json" }
+        });
 
-        // Funções para confirmar presença
-        function confirmYes() {
-            const name = document.getElementById("nameInput").value.trim();
-            if (name === "") {
-                alert("Por favor, digite seu nome.");
-                return;
-            }
-            // Evita nomes repetidos em ambas listas
-            if (yesListData.includes(name)) {
-                alert("Este nome já está confirmado como presente.");
-                return;
-            }
-            if (noListData.includes(name)) {
-                noListData = noListData.filter(n => n !== name);
-            }
-            yesListData.push(name);
-            saveData();
-            updateDisplay();
-            document.getElementById("nameInput").value = "";
-        }
+        document.getElementById("nameInput").value = "";
+        fetchList();
+    }
 
-        function confirmNo() {
-            const name = document.getElementById("nameInput").value.trim();
-            if (name === "") {
-                alert("Por favor, digite seu nome.");
-                return;
-            }
-            // Evita nomes repetidos em ambas listas
-            if (noListData.includes(name)) {
-                alert("Este nome já está confirmado como não irá.");
-                return;
-            }
-            if (yesListData.includes(name)) {
-                yesListData = yesListData.filter(n => n !== name);
-            }
-            noListData.push(name);
-            saveData();
-            updateDisplay();
-            document.getElementById("nameInput").value = "";
-        }
-
-        // Atualiza a tela ao carregar a página
-        window.onload = updateDisplay;
-    </script>
+    window.onload = fetchList;
+</script>
 
 </body>
 </html>
